--- a/index.css
+++ b/index.css
@@ -509,29 +509,29 @@ body:not(.user-is-tabbing) a:focus {
 /* ----- Experiences ----- */
 /* --------------------------------------- */
 
-.work__box {
+.exp__box {
     display: flex;
     align-items: center;
 }
 
 @media(max-width: 900px) {
-    .work__box {
+    .exp__box {
         align-items: initial;
         flex-direction: column-reverse;
     }
 }
 
-.work__box:not(:last-child) {
+.exp__box:not(:last-child) {
     margin-bottom: 25rem;
 }
 
 @media(max-width: 500px) {
-    .work__box:not(:last-child) {
+    .exp__box:not(:last-child) {
         margin-bottom: 20rem;
     }
 }
 
-.work__links {
+.exp__links {
     display: flex;
     align-items: center;
 }
@@ -540,36 +540,36 @@ body:not(.user-is-tabbing) a:focus {
     flex: 0 0 95%;
 }
 
-.work__list {
+.exp__list {
     /* list-style-type: square; */
     list-style-position: inside;
     margin-bottom: var(--gutter-normal);
 }
 
-.work__code {
+.exp__code {
     display: block;
     height: 3rem;
     margin-left: var(--gutter-normal);
     transition: all .3s;
 }
 
-.work__code:hover {
+.exp__code:hover {
     transform: scale(1.2);
 }
 
-.work__image-box {
+.exp__image-box {
     margin-bottom: var(--gutter-normal);
 }
 
 @media(min-width: 901px) {
-    .work__image-box {
+    .exp__image-box {
         flex: 1;
         margin: 0 0 0 10rem;
     }
 }
 
 @media(max-width: 900px) {
-    .work__code {
+    .exp__code {
         height: 4rem;
     }
 }
